Refactor security configuration to enhance CORS settings and update authentication routes; introduce new DTOs for location and point data; implement location services and update dashboard with location features; enhance user interface components for better navigation and user experience.